#    Licensed under the Apache License, Version 2.0 (the "License"); you may
#    not use this file except in compliance with the License. You may obtain
#    a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[metadata]
name=validator
version = 0.0.1
summary = Validator API
description-file = README.rst
license = Apache License, Version 2.0
author = pmverdugo
author_email = pmverdugo@dit.upm.es
homepage = http://github.org/ging/validator

[files]
packages =
    validator
scripts =
    validator/command/validator-api.py
    validator/command/validator-client.py
    validator/command/generate-image.py

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts =
    validator/command/validator-api.py

oslo.config.opts =
    validator = validator.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = validator/locale
domain = validator

[update_catalog]
domain = validator
output_dir = validator/locale
input_file = validator/locale/validator.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = validator/locale/validator.pot